# anz_finance

./: .gitignore  README.md  antigo_run_dashboard.py  anz_finance.py  config.py  dash.py  generate_csv.py  pyproject.toml  requirements.txt  run_dashboard.py
modules/dashboard/: antigo_streamlit_app.py  streamlit_app.py
modules/data/: finance_data.py
modules/llm/: antigo_categorizer.py
modules/parsers/: antigo_ofx_parser.py
